boutons calculatrice et fix dark mode

--- a/JavaScript/Exercice3/style.less
+++ b/JavaScript/Exercice3/style.less
@@ -7,6 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: background-color 300ms ease;
 }
 
 #darktoggle {
@@ -17,6 +18,7 @@ body {
 
 h1 {
     font-size: 48px;
+    transition: color 300ms ease;
 }
 
 .boutonAjouter {
@@ -40,4 +42,8 @@ h1 {
     border: 2px solid black;
     margin: 2px;
     padding: 2px;
+}
+
+span {
+    transition: color 300ms ease;
 }
